# laboratorna-7.2-red

./: CMakeLists.txt  labor7_2  labor7_2.cpp  labor7_2.hpp
test/: CMakeLists.txt  labor7_2test.cpp
